# scade-guitools

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.rst  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  label.yml
doc/: make.bat
doc/changelog.d/: 1.added.md  13.dependencies.md  16.dependencies.md  17.maintenance.md  19.fixed.md  21.added.md  23.added.md  27.added.md  30.miscellaneous.md  33.miscellaneous.md  35.miscellaneous.md  37.miscellaneous.md  38.miscellaneous.md  39.miscellaneous.md  43.miscellaneous.md  44.test.md  45.miscellaneous.md  46.miscellaneous.md  5.documentation.md  53.miscellaneous.md  54.miscellaneous.md  55.fixed.md  58.maintenance.md  6.added.md  61.fixed.md  62.maintenance.md  66.maintenance.md  72.dependencies.md  9.documentation.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/api/: index.rst
doc/source/getting-started/: index.rst
doc/source/user-guide/: index.rst
doc/styles/config/vocabularies/ANSYS/: accept.txt
examples/dialog/: README.md  pyproject.toml
examples/dialog/src/guitools/examples/dialog/: __init__.py  dialog.py  dialog.srg
examples/page/: README.md  pyproject.toml
examples/page/src/guitools/examples/page/: __init__.py  page.py  page.srg
src/ansys/scade/guitools/: __init__.py  command.py  control.py  csts.py  data.py  dialog.py  enable_debugpy.py  guihost.py  ide.py  interfaces.py  page.py  register.py  registry.py  stubs.py  studio.py  studio_ext.py  unregister.py
tests/: conftest.py  test_metadata.py  test_registry.py
tests/GuiHost/: Project.etp  README.md  pyproject.toml
tests/GuiHost/src/guihost_ut/: __init__.py  test_client.py
tests/Integration/: P.xscade  Project.etp  README.md  Reporter.tcl  dialog.py  dialog_box.py  gui.py  guitools_ut_ext.srg  test_control.py  test_dialog_box.py  test_pragmas.py  test_properties.py  test_settings.py
tests/pytest/: conftest.py  test_command.py  test_ide.py
tests/pytest/ide/: .gitignore  BROWSER.ref  Model.etp  O.ssl  P.xscade  REPORT.ref  TEXT.ref  options.tot  run.py
version/: index.html
version/2.0/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/2.0/_sources/: changelog.rst.txt
version/2.0/_sources/api/ansys/scade/guitools/: get_srg_name.rst.txt  srg.rst.txt
version/2.0/_sources/getting-started/: index.rst.txt
version/2.0/_sources/user-guide/: index.rst.txt
version/2.0/_static/: search.json
version/2.0/api/: index.html
version/2.0/api/ansys/scade/guitools/: get_srg_name.html  index.html  srg.html
version/2.0/api/ansys/scade/guitools/control/: CheckButton.html  ComboBox.html  Edit.html  FSM.html  FileSelector.html  GroupRadioBox.html  ObjectComboBox.html  PushButton.html  RadioBox.html  StaticComboBox.html  StaticEdit.html  StaticObjectComboBox.html  StaticRadioBox.html  announcement.html  index.html
version/2.0/api/ansys/scade/guitools/csts/: index.html
version/2.0/api/ansys/scade/guitools/data/: DataExchange.html  PragmaDataExchange.html  ProjectPropertiesDataExchange.html  ScadePropertiesDataExchange.html  SettingsDataExchange.html  ToolPropDataExchange.html  index.html
version/2.0/api/ansys/scade/guitools/dialog/: DS.html  DialogBox.html  index.html
version/2.0/api/ansys/scade/guitools/enable_debugpy/: attach_to_debugger.html  index.html
version/2.0/api/ansys/scade/guitools/guihost/: HostPage.html  ProxyPageClient.html  index.html  main.html
version/2.0/getting-started/: index.html
version/2.0/user-guide/: index.html
version/2.1/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/2.1/_sources/: changelog.rst.txt  contributing.rst.txt
version/2.1/_static/: search.json
version/2.1/api/: index.html
version/2.1/api/ansys/scade/guitools/: get_srg_name.html  index.html  srg.html
version/2.1/getting-started/: index.html
version/2.1/user-guide/: index.html
version/2.2/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/2.2/_sources/: changelog.rst.txt  index.rst.txt
version/2.2/_sources/getting-started/: index.rst.txt
version/2.2/_sources/user-guide/: index.rst.txt
version/2.2/_static/: search.json
version/2.2/api/: index.html
version/2.2/api/ansys/scade/guitools/: get_srg_name.html  index.html  srg.html
version/2.2/getting-started/: index.html
version/2.2/user-guide/: index.html
version/2.3/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/2.3/_sources/: changelog.rst.txt  index.rst.txt
version/2.3/_sources/user-guide/: index.rst.txt
version/2.3/_static/: documentation_options.js  search.json
version/2.3/api/ansys/scade/guitools/: get_srg_name.html  index.html  srg.html
version/2.3/getting-started/: index.html
version/2.3/user-guide/: index.html
version/dev/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: changelog.rst.txt  contributing.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/scade/guitools/: get_srg_name.html  index.html  srg.html
version/dev/getting-started/: index.html
version/dev/user-guide/: index.html
version/stable/: changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/stable/_sources/getting-started/: index.rst.txt
version/stable/_static/: documentation_options.js  search.json
version/stable/api/: index.html
version/stable/api/ansys/scade/guitools/: get_srg_name.html  index.html  srg.html
version/stable/getting-started/: index.html
version/stable/user-guide/: index.html
(+416 files in other folders)
