[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="guitools-examples-page"
version="0.1.dev0"
description ="Example of property page."
readme="README.md"

# 3.10
requires-python = ">=3.10,<3.11"

[tool.flit.module]
name = "guitools.examples.page"

[project.entry-points."ansys.scade.registry"]
srg = "guitools.examples.page:srg"
