[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name="guihost-ut"
version="2.3.5"
description ="GuiHost client pages for tests."
readme="README.md"

# only 3.7, 3.10, or >= 3.12
requires-python = ">=3.7,!=3.8.*,!=3.9.*,!=3.11"

[project.optional-dependencies]
build = [
    "build==1.2.2.post1",
    "twine==6.0.1"
]

[tool.flit.module]
name = "guihost_ut"

[project.entry-points."ansys.scade.guihost"]
pages = "guihost_ut:pages"
